@@ -1833,12 +1833,12 @@ _elm_scroll_momentum_animator(void *data)
         _elm_scroll_wanted_coordinates_update(sid, x, y);
         psd->api->pos_max_get(sid->pan_obj, &maxx, &maxy);
         psd->api->pos_min_get(sid->pan_obj, &minx, &miny);
-        if (!sid->bounce_horiz)
+        if (!_elm_config->thumbscroll_bounce_enable || !sid->bounce_horiz)
           {
              if (x <= minx) no_bounce_x_end = EINA_TRUE;
              if ((x - minx) >= maxx) no_bounce_x_end = EINA_TRUE;
           }
-        if (!sid->bounce_vert)
+        if (!_elm_config->thumbscroll_bounce_enable || !sid->bounce_vert)
           {
              if (y <= miny) no_bounce_y_end = EINA_TRUE;
              if ((y - miny) >= maxy) no_bounce_y_end = EINA_TRUE;
