@@ -1,3 +1,10 @@
+Changes since Elementary 1.7.6:
+-------------------------
+
+Fixes:
+
+   * Quit the scroll animator if the scroller don't have a bounce and reach a edge.
+
 Elementary 1.7.6
 
 Changes since Elementary 1.7.5:
